--- a/index.html
+++ b/index.html
@@ -56,8 +56,8 @@
                     </ul>
                 </nav>
                 <div class="action">
-                    <button class="btn btn-left">Sign in</button>
-                    <button class="btn btn-right">Sign up</button>
+                    <a class="btn btn-left">Sign in</a>
+                    <a class="btn btn-right">Sign up</a>
                 </div>
             </div>
         </div>
